# nsec3-candidate-scheduler

./: README.md  adaptive_build_backend.py  build_backend.py  example_config.json  hashcat_scheduler.py  pyproject.toml
adaptive_hashcat_scheduler/: __main__.py  cli.py  config.py  scheduler.py
adaptive_hashcat_scheduler/arms/: amass_osint.py  base.py  brute_force.py  dictionary.py  feedback_common.py  (+7 more)
configs/: adaptive_predictive_feedback.json
docs/: config.md  feedback.md  osint.md  state-and-logs.md
examples/: .gitignore  README.md  example_config.json
models/: common_prefixes_top10000.txt  common_prefixes_top50.txt  common_suffixes_top10000.txt  common_suffixes_top50.txt  prefix_pairs.tsv  suffix_pairs.tsv
nsec3_candidate_scheduler/: __main__.py  cli.py  config.py  logging_utils.py  naming.py  scheduler.py
tests/: conftest.py  test_all_hashes_cracked_stopping.py  test_amass_osint_arm.py  test_config_examples.py  test_dictionary_wordlist_startup.py  test_feedback_active_slice.py  test_feedback_execution.py  test_feedback_state.py  test_hashcat_command_builder.py  test_integration_feedback_layout.py  test_logging_schema.py  test_optimized_kernel_failover.py  test_parent_domain_feedback.py  test_permutation_feedback.py  test_potfile_parsing.py  test_predictive_feedback.py  test_progress_accounting.py  test_project_rename.py  test_scheduler_scoring.py  test_scheduler_selection.py  test_scheduler_warmup.py  test_static_affix_feedback.py  test_subfinder_osint_arm.py  test_warmup_arm_local.py
wordlists/: cleaned_seclists_labels.txt  rfc1035_pcfg_top8843709.txt
(+28 files in other folders)
