[build-system]
requires = []
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "nsec3-candidate-scheduler"
version = "0.1.0"
description = "Adaptive scheduler for DNS/NSEC3 candidate validation with hashcat"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
nsec3-candidate-scheduler = "nsec3_candidate_scheduler.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
